--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
         "chai": "^4.3.4",
         "env-cmd": "^10.1.0",
         "mocha": "^9.1.3",
-        "typescript": "^4.5.4"
+        "typescript": "^4.5.4",
+        "@types/express": "^4.17.13"
     },
     "dependencies": {
-        "@types/express": "^4.17.13",
         "express": "^4.17.3"
     }
 }
